fix user avatar overlap in group view in mobile browser

--- a/client/stylesheets/app.scss
+++ b/client/stylesheets/app.scss
@@ -44,6 +44,7 @@ $positive: #DE4F4F;
 
 
 .item-avatar {
+  display: inline-block;
   line-height: 45px;
 }
 
